# simple-notepad

./: .gitignore  CONTRIBUTING_I18N.md  DEPLOYMENT.md  DESIGN_PHILOSOPHY.md  LICENSE  README.md  build-release.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.web.ts
.github/workflows/: build-and-deploy.yml
scripts/: generate-release-notes.js  release.sh  update-version.js  validate-translations.js
src/: main.ts  styles.css  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/i18n/: languages.ts
src/i18n/locales/: _template.ts  en.ts  es.ts  fr.ts  ja.ts  zh.ts
