[package]
name = "simple-notepad"
version = "1.0.0"
description = "シンプルメモ帳 - Pure Function Apps"
authors = ["Pure Function Apps"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simple_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# リリースビルド最適化設定
[profile.release]
opt-level = 3        # 最大最適化
lto = true          # Link Time Optimization
codegen-units = 1   # 単一コード生成ユニット（最適化優先）
panic = "abort"     # パニック時は即座に終了（バイナリサイズ削減）
strip = true        # デバッグシンボル削除

